新增切换城市和手动更新天气的功能

--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -11,15 +11,15 @@
         android:layout_height="match_parent"
         android:scaleType="centerCrop" />
 
-    <!--<android.support.v4.widget.DrawerLayout-->
-        <!--android:id="@+id/drawer_layout"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent">-->
+    <android.support.v4.widget.DrawerLayout
+        android:id="@+id/drawer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <!--<android.support.v4.widget.SwipeRefreshLayout-->
-            <!--android:id="@+id/swipe_refresh"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent">-->
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipe_refresh"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <ScrollView
                 android:id="@+id/weather_layout"
@@ -48,10 +48,17 @@
 
             </ScrollView>
 
-        <!--</android.support.v4.widget.SwipeRefreshLayout>-->
+        </android.support.v4.widget.SwipeRefreshLayout>
 
+        <fragment
+            android:id="@+id/choose_area_fragment"
+            android:name="com.example.zhangyue.starweather.ChooseAreaFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
 
+            />
 
-    <!--</android.support.v4.widget.DrawerLayout>-->
+    </android.support.v4.widget.DrawerLayout>
 
 </FrameLayout>
